...

    <!-- Bible Story 3 -->
    <string name="bible_story_text_3">That in blessing I will bless thee, and in multiplying I will multiply thy seed as the stars of the heaven, and as the sand which is upon the sea shore; and thy seed shall possess the gate of his enemies;</string>
    <string name="bible_story_verse_3">22:17</string>

    <!-- Bible Story 4 -->
    <string name="bible_story_text_4">And, behold, the LORD stood above it, and said, I am the LORD God of Abraham thy father, and the God of Isaac: the land whereon thou liest, to thee will I give it, and to thy seed;</string>
    <string name="bible_story_verse_4">28:13</string>

    <!-- Bible Story 5 -->
    <string name="bible_story_text_5">Moreover he said, I am the God of thy father, the God of Abraham, the God of Isaac, and the God of Jacob. And Moses hid his face; for he was afraid to look upon God.</string>
    <string name="bible_story_verse_5">3:6</string>

    <!-- Bible Story 6 -->
...
