<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lunch Tray</string>
    <string name="back_button">Back</string>
    <string name="cancel">Cancel</string>
    <string name="choose_accompaniment">Choose Accompaniment</string>
    <string name="choose_entree">Choose Entree</string>
    <string name="choose_side_dish">Choose Side Dish</string>
    <string name="next">Next</string>
    <string name="order_checkout">Order Checkout</string>
    <string name="start_order">Start Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="tax">Tax: %s</string>
    <string name="total">Total: %s</string>
    <string name="submit">Submit</string>
</resources>
